--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28"/>
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
     <application
         android:allowBackup="true"
@@ -26,7 +27,7 @@
         <activity android:name=".CameraActivity"
             android:exported="true" android:parentActivityName=".MainActivity">
         </activity>
-        <activity android:name=".MicActivity"
+        <activity android:name=".microphone.MicActivity"
             android:exported="true" android:parentActivityName=".MainActivity">
         </activity>
         <activity android:name=".storage.StorageActivity"
