--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:maxSdkVersion="28"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
 
     <application
         android:allowBackup="true"
@@ -37,6 +40,16 @@
             android:exported="true"
             android:parentActivityName=".MainActivity">
         </activity>
+        <activity android:name=".sms.SmsActivity"
+            android:exported="true"
+            android:parentActivityName=".MainActivity">
+        </activity>
+        <receiver android:name=".sms.SmsActivity$ReceiveSms" android:exported="true"
+            android:permission="android.permission.BROADCAST_SMS">
+        <intent-filter>
+            <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+        </intent-filter>
+    </receiver>
 
     </application>
 
